src/objects/CsDfEm__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Case RT default email</label>
    <fields>
        <fullName>agMgEm__c</fullName>
        <label>Agency Management Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agMgRt__c</fullName>
        <label>Agency Management RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>arMgEM__c</fullName>
        <label>Airline Management Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>arMgRT__c</fullName>
        <label>Airline Management RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caUsEm__c</fullName>
        <label>CASS USA Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>caUsRT__c</fullName>
        <label>CASS USA Management RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnsEM__c</fullName>
        <label>CNS Endorsement Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cnsRT__c</fullName>
        <label>CNS Endorsment RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efEM__c</fullName>
        <label>EF Services Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>efRT__c</fullName>
        <label>EF Services RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icsEM__c</fullName>
        <label>IATA Customer Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>icsRT__c</fullName>
        <label>IATA Customer Service RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iinEM__c</fullName>
        <label>Info IATAN Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>iinRT__c</fullName>
        <label>Info IATAN RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>